first version that captures traffic more or less